// ログインボーナスユーザー取得レスポンス
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/loginBonus";

import "user_login_bonus_structure.proto";

message LoginBonusGetUserResponse {
  repeated UserLoginBonus user_login_bonuses = 1;
}
